<resources>
    <string name="app_name">AnuroopJodi</string>
    <string name="string_internet_connection_warning">Internet Connection not Available</string>
    <string name="already_registered">Already Registred? Login Here.</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="exit">Exit</string>
    <string name="_continue">CONTINUE</string>
    <string name="allow">Allow</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="quit">Exit App</string>
    <string name="close_the_app">Close the app?</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="error_logging">invalid username or password provided</string>
    <string name="error_something_wrong">Something went wrong… Please try again after some time!!</string>
    <string name="error_server">The server could not be found… Please try again after some time!!</string>
    <string name="error_connection">Cannot connect to Internet… Please check your connection!!</string>
    <string name="error_timeout">Connection Timed out… Please check your internet connection!!</string>
    <string name="error_network">Cannot connect to Internet… Please check your connection!!</string>
    <string name="confirm_close_the_app">Are you sure you want to close the app?</string>
    <string name="internet_connection_required">Internet connection is required to run this app. Turn on mobile-network/Wi-Fi.</string>
    <string name="string_help_text"> The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_pick_up_image">Pick Location Image</string>
    <string name="about_us">About Us</string>
    <string name="large_text"><![CDATA["We are one of the leading Pest control service providers.\n We are a company accredited by Government of India; lead by   Mr. Suhas Wani and licensed to operate Commercial Pest control services.\n We adopted advanced technology to control Insect and Pests. We work with Fresh fruits and vegetable Industries, Dairy Industry, Hotels, Frozen product Industries, Pharmaceutical Industries, Construction companies, Power Plant, Steel Companies, wooden packaging companies and have several satisfied customers in Maharashtra. We offer Industrial Pest control services, Commercial Pest Control services, Major and Minor Insect control services, Weed Control Services and Residential pest control services./n/n We provide regular training to our staff as Mr. Suhas Wani has attended ISO, HACCP and Global GAP training, Lead Auditor courses of JAS-ANZ, Standard Australia International courses and we have competency in fumigation practice in accordance with the standards DAWR quarantine treatment (AFAS). Mr. Suhas Wani is having international exposure in working with South East Asian nations and Organization from Europe and UK.\n We are a member of Bayer Network, a Global certification programme of Bayer Crop Science Limited, Environmental Science Division. Thus, we comply with the assessment parameters like Regulatory, Business, Technical And Customer Satisfaction laid down by Bayer Crop Science Limited. We have all registration like GST, Service Tax, Profession Tax, EPF, BRC to our employees and Medical facilities as per requirement to complete the task given by any organization at any place."]]></string>
    <string name="subAddress">Office Address</string>
    <string name="help_us">Contact Us</string>
    <string name="notification_delete_warning">Are you sure you want to delete All Notifications?</string>
    <string name="all_notifications_deleted_sucessfully">All Notifications Deleted Successfully...</string>
    <string name="notifications_caps">NOTIFICATION</string>
    <string name="delete_notifications_caps">CLEAR ALL</string>
    <string name="no_notifications_found">No Notification Found</string>
    <string name="no_notification">No Notification Found</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_ago">Days ago</string>
    <string name="confirm_delete">Delete Notification</string>
    <string name="confirm_delete1">Delete Notifications</string>
    <string name="delete_message">Are you sure you want to delete this Notification?</string>
    <string name="noti_delete">Notification Delete Successfully</string>
    <string name="title_activity_new_dashboard">NewDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vijendra Salve</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_url">Download Now https://play.google.com/store/apps/details?id=com.wht.anuroopjodi</string>
    <string name="page_text_1">Fellow</string>
    <string name="sign_up">Sign Up</string>
    <string name="reg_title1">Don\'t have an account ?</string>
    <string name="reg_title2"> Free Sign Up</string>
    <string name="login_title1">Welcome To </string>
    <string name="login_title2"> AnuroopJodi </string>
    <string name="lbl_forgot"><u>Forgot Password ?</u></string>
    <string name="lbl_welcome">Welcome To</string>
    <string name="lbl_bramin_matrimony">AnuroopJodi </string>
    <string name="lbl_bramin">BRAHMIN</string>
    <string name="lbl_matrimony">Matrimony</string>
    <string name="lbl_take_tour">Take Tour</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_show_password"><u>Show Password</u></string>
    <string name="lbl_hide_password"><u>Hide Password</u></string>
    <string name="lbl_terms_n_cond_one">"By Clicking Sign Up you agree to the following "</string>
    <string name="lbl_terms_n_cond_two">Terms And Conditions</string>
    <string name="lbl_terms_n_cond_three">" without opposition"</string>
    <string name="lbl_and">\u0020 and \u0020 </string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_create_account">CREATE ACCOUNT</string>
    <string name="lbl_signup_page_title_one">Find Your Suitable Match!</string>
    <string name="lbl_profile_created_by">Profile Created By</string>
    <string name="lbl_select_who_is_creating">Select who is creating profile</string>
    <string name="lbl_profile_created_for">Profile Created For</string>
    <string name="lbl_select_profile_for">Select Profile For</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_select_gender_of_bride_groom"> Bride / Groom </string>
    <string name="lbl_enter_first_name">Enter first name of bride / groom</string>
    <string name="lbl_enter_middle_name">Enter Middle name of bride / groom</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_devak">Are you interested for Intercaste Marriage?</string>
    <string name="lbl_Devak_hint">Are you interested for Intercaste Marriage?</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_enter_last_name">Enter last name of bride / groom</string>
    <string name="lbl_email_hint">This email is used for all communication</string>
    <string name="lbl_dob_hind">Date of birth of bride / groom</string>
    <string name="lbl_dob">Date of Birth</string>
    <string name="lbl_working_city">Working City</string>
    <string name="lbl_email">Email ID</string>
    <string name="lbl_mobile">Mobile Number</string>
    <string name="lbl_mobile_hint">Interested matches will contact you in this number</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_hint">Enter a password to keep your account secure</string>
    <string name="lbl_native_place_name">Enter native place</string>
    <string name="lbl_agri_land">Property details</string>
    <string name="lbl_agriculture_land_hint">Enter Property details</string>
    <string name="lbl_working_city_hint">Select working city</string>
    <string name="lbl_Native_Place">Native Place</string>
    <string name="lbl_physical_status">Physical Status</string>
    <string name="lbl_state">State</string>
    <string name="lbl_state_hint">Select state of bride / groom</string>
    <string name="lbl_city">City</string>
    <string name="lbl_city_hint">Select city to find the near matches</string>
    <string name="lbl_mother_tongue">Mother Tongue</string>
    <string name="lbl_mother_tongue_hint">Select mother tongue to find the one who speak your language</string>
    <string name="lbl_marital_status">Marital Status</string>
    <string name="lbl_loading">Loading...</string>
    <string name="lbl_technical_error">Technical Error</string>
    <string name="lbl_select_mother_tongue">Select Mother Tongue</string>
    <string name="lbl_caste">Caste</string>
    <string name="lbl_caste_hint">Select Caste</string>
    <string name="lbl_subcaste_hint">Select subcaste for perfect match from your religion</string>
    <string name="lbl_subcaste">Subcaste</string>
    <string name="lbl_select_subcaste">Select Subcaste</string>
    <string name="lbl_select_state">Select State</string>
    <string name="lbl_select_city">Select City</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="lbl_sumit">SUBMIT</string>
    <string name="lbl_resend_otp_hint">Don\'t receive an OTP?</string>
    <string name="lbl_timer">Timer(00:00)</string>
    <string name="lbl_verfy_email_and_mobile">VERIFY EMAIL AND MOBILE NUMBER</string>
    <string name="lbl_personal_details">Personal Details</string>
    <string name="lbl_successful_text">You have successfully registered with AnuroopJodi Matrimony</string>
    <string name="lbl_congratulation">Congratulations!</string>
    <string name="lbl_basic_details">Enter your basic details</string>
    <string name="lbl_height_hint">Height of bride / groom</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_weight_hint">Weight of the bride / groom</string>
    <string name="lbl_birth_time">Birth Time</string>
    <string name="lbl_birth_time_hind">Birth time of bride / groom</string>
    <string name="lbl_birth_place">Birth Place</string>
    <string name="lbl_birth_place_hint">Birth Place of bride / groom</string>
    <string name="lbl_basic_details_word">Basic Details</string>
    <string name="dra_logout">Logout</string>
    <string name="dra_share">Share our love</string>
    <string name="dra_terms_and_condn">Terms &amp; Conditions</string>
    <string name="dra_contact_us">Contact us</string>
    <string name="dra_about_us">About us</string>
    <string name="dra_my_chat">My Chat</string>
    <string name="lbl_middle_name">Middle Name</string>
</resources>