<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDailogClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin_20"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/colorPrimaryFullDark" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="Update"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/etFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/border_layout"
                            android:drawableRight="@drawable/ic_user"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/black"
                            android:inputType="textCapWords|textNoSuggestions"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text=""
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginRight="15dp"
                            android:background="#ffffff"
                            android:text="@string/lbl_first_name"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvFirstNameHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_3"
                        android:layout_marginTop="@dimen/margin_3"
                        android:background="#ffffff"
                        android:text="@string/lbl_enter_first_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/etMiddleName"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/border_layout"
                            android:drawableRight="@drawable/ic_user"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/black"
                            android:inputType="textCapWords|textNoSuggestions"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text=""
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginRight="15dp"
                            android:background="#ffffff"
                            android:text="@string/lbl_middle_name"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvMiddleNameHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_3"
                        android:layout_marginTop="@dimen/margin_3"
                        android:background="#ffffff"
                        android:text="@string/lbl_enter_middle_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/etLastName"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/border_layout"
                            android:drawableRight="@drawable/ic_user"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/black"
                            android:inputType="textCapWords|textNoSuggestions"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text=""
                            android:textSize="14dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginRight="15dp"
                            android:background="#ffffff"
                            android:text="@string/lbl_last_name"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvLastNameHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_3"
                        android:layout_marginTop="@dimen/margin_3"
                        android:background="#ffffff"
                        android:text="@string/lbl_enter_last_name"
                        android:textColor="@color/black"
                        android:textSize="10dp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tvGendenTitleOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_gender"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tvGendenTitleTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvGendenTitleOne"
                        android:text="@string/lbl_select_gender_of_bride_groom"
                        android:textColor="@color/black"
                        android:textSize="10dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvGendenTitleTwo"
                        android:layout_marginTop="15dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:padding="@dimen/margin_15"
                    android:text="Update"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>

